--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:3.0.0'
     implementation 'info.picocli:picocli-codegen:4.6.2'
     implementation 'info.picocli:picocli:4.6.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
 }
 
 test {
