--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.20'
     id 'application'
     id 'groovy'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 group = 'com.phundal.ast.parser'
@@ -24,6 +25,7 @@ dependencies {
     implementation 'info.picocli:picocli-codegen:4.6.2'
     implementation 'info.picocli:picocli:4.6.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1'
 }
 
 test {
