--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
-
+pluginManagement {
+  plugins {
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
+  }
+}
 rootProject.name = 'gradle-ast-parser'
 
