--- a/gradle-ast-parser/binary/project-catalog.json
+++ b/gradle-ast-parser/binary/project-catalog.json
@@ -4,12 +4,14 @@
       "name": "ast-parser",
       "path": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser",
       "allowlistClosuresPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/allowlist-closures.txt",
+      "disallowedDependenciesPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/disallowed-dependencies.txt",
       "ignoreBuildsPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/ignore-builds.txt"
     },
     "register": {
       "name": "android-register",
       "path": "/Users/phundal/Development/android-register",
       "allowlistClosuresPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/allowlist-closures.txt",
+      "disallowedDependenciesPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/disallowed-dependencies.txt",
       "ignoreBuildsPathAsString": "/Users/phundal/Development/gradle-build-parser/gradle-ast-parser/binary/ignore-builds.txt"
     }
   }
