--- a/gradle-ast-parser/build.gradle
+++ b/gradle-ast-parser/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
-group = 'com.phundal.ast.parser'
+group = 'com.squareup.ast.parser'
 version = '1.0'
 
 application {
